fix stupid flicker with footer

--- a/src/layout/Nav/Nav.scss
+++ b/src/layout/Nav/Nav.scss
@@ -59,3 +59,26 @@ nav {
   font-size: 2rem;
   cursor: pointer;
 }
+
+footer {
+  text-align: center;
+  height: 50px;
+  background: #974b4b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+
+footer a {
+  text-decoration: none;
+  color: #fafafa;
+  font-size: 18px;
+}
+
+.body {
+  min-height: calc(100vh);
+}
